# minetest

./: CMakeLists.txt  Makefile  README.md  compile_commands.json  main.c
data/fonts/: solway.fnt
data/shaders/: main.frag  main.vert  text.frag  text.vert  ui.vert
include/: block.h  camera.h  chunk.h  constants.h  debugmenu.h  direction.h  event.h  game.h  highlight.h  mesh.h  player.h  ray.h  shader.h  sprite.h  state.h  system.h  text.h  world.h
include/core/: system.h
include/glx/: atlas.h  shader.h  texture.h  vao.h  vbo.h
include/math/: matrix.h  vec.h
include/sys/: event.h  system.h
include/utils/: font_loader.h  img_loader.h  matrix.h  stoper.h  types.h
src/: atlas.c  block.c  camera.c  chunk.c  debugmenu.c  direction.c  game.c  highlight.c  main.c  mesh.c  player.c  ray.c  shader.c  sprite.c  stoper.c  system.c  temp.txt  text.c  texture.c  world.c
src/blocks/: cobble.c  dirt.c  glass.c  granit.c  grass.c  plank.c  rose.c  stone.c  wood.c
src/core/: system.c
src/glx/: atlas.c  shader.c  texture.c  vao.c  vbo.c
src/math/: matrix.c  vec.c
src/sys/: system.c
src/utils/: font_loader.c  img_loader.c  matrix.c  stoper.c  vec.c
